// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chatMessage > renders with actions slot correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <div data-slot="actions" class="">Actions slot</div>
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with as correctly 1`] = `
"<section data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</section>"
`;

exports[`chatMessage > renders with avatar correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></div>
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with class correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with compact correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with content correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with content slot correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Content slot</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with files slot correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <div data-slot="header" class="">
    <div data-slot="files" class="">Files slot</div>
  </div>
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with icon correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="leading" class=""><span class="iconify i-lucide:user" aria-hidden="true" data-slot="leadingIcon"></span></div>
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with leading slot correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="leading" class="">Leading slot</div>
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with parts correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with role assistant correctly 1`] = `
"<article data-role="assistant" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with side right correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with ui correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with variant naked correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with variant outline correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with variant soft correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with variant solid correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`chatMessage > renders with variant subtle correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="body" class="">
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;
